--- a/css/theme/source/moon.scss
+++ b/css/theme/source/moon.scss
@@ -56,7 +56,7 @@ $mainColor: $base1;
 $headingColor: white;
 $headingTextShadow: none;
 $backgroundColor: $blue;
-$linkColor: $blue;
+$linkColor: $teal;
 $linkColorHover: lighten( $linkColor, 20% );
 $selectionBackgroundColor: $barely;
 
@@ -65,3 +65,60 @@ $selectionBackgroundColor: $barely;
 // Theme template ------------------------------
 @import "../template/theme";
 // ---------------------------------------------
+
+.orange-txt {
+	color: $orange;
+}
+
+.two-col {
+	column-count: 2;
+	column-gap: 5vw;
+}
+
+.reveal a.separated {
+	display: block;
+	margin-top: 2vw;
+	text-decoration: underline;
+}
+
+.reveal .slides section.xl {
+	width: 140%;
+	margin-left: -20%;
+}
+
+.boxed {
+	border: 4px dotted $orange !important;
+	padding: 40px !important;
+}
+
+.reveal h5 {
+	font-size: 28px;
+	color: $teal;
+}
+
+ul.file-structure {
+	font-size: 18px;
+	font-family: monospace;
+	list-style: none;
+	text-align: left;
+	background-color: #3f3f3f;
+	padding: 20px 40px;
+	box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3); 
+	ul {
+		list-style: none;
+		ul {
+			list-style: none;
+		}
+	}
+}
+
+.reveal pre {
+	box-shadow: none;
+	code {
+		box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3);
+	}
+}
+
+.flex {
+	display: flex;
+}
