--- a/css/custom.scss
+++ b/css/custom.scss
@@ -13,3 +13,9 @@ section {
 body {
 	background: $blue;
 }
+
+.reveal section img {
+	background: transparent;
+	border: none;
+	box-shadow: none; 
+}
