--- a/css/theme/source/moon.scss
+++ b/css/theme/source/moon.scss
@@ -91,6 +91,10 @@ $selectionBackgroundColor: $barely;
 	padding: 40px !important;
 }
 
+.flex .boxed {
+	flex: 1; 
+}
+
 .reveal h5 {
 	font-size: 28px;
 	color: $teal;
@@ -103,7 +107,7 @@ ul.file-structure {
 	text-align: left;
 	background-color: #3f3f3f;
 	padding: 20px 40px;
-	box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3); 
+	box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3);
 	ul {
 		list-style: none;
 		ul {
