feat: added react branch

--- a/css/theme/moon.css
+++ b/css/theme/moon.css
@@ -315,3 +315,15 @@ ul.file-structure {
 
 .flex {
   display: flex; }
+
+.reveal section .hipster-box {
+  background: rgba(255, 255, 255, 0.3);
+  padding: 20px;
+  border: 5px solid white;
+  flex: 1;
+  margin: 0 10px; }
+  .reveal section .hipster-box img {
+    max-height: 35vh;
+    background: transparent;
+    box-shadow: none;
+    border: none; }
